Rye migration and feature extension (#1)
* migrate to rye, extend gui

Dev process migrated to rye
Allow user to choose the character in the GUI

* match version with last

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,84 +1,36 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "qtcowsay"
-dynamic = ["version"]
-description = ''
-readme = "README.md"
-requires-python = ">=3.8"
-license = "MIT"
-keywords = []
+version = "0.0.1"
+description = "PyQt6 wrapper for qtcowsay."
 authors = [
-  { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" },
-]
-classifiers = [
-  "Development Status :: 4 - Beta",
-  "Programming Language :: Python",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10",
-  "Programming Language :: Python :: 3.11",
-  "Programming Language :: Python :: 3.12",
-  "Programming Language :: Python :: Implementation :: CPython",
-  "Programming Language :: Python :: Implementation :: PyPy",
+    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
 ]
 dependencies = [
-  "cowsay",
-  "PyQt6"
+    "cowsay>=6.1",
+    "PyQt6>=6.6.1",
 ]
+readme = "README.md"
+requires-python = ">= 3.8"
+license = { text = "MIT" }
+
+[project.scripts]
+qtcowsay = "qtcowsay:run"
 
 [project.urls]
 Documentation = "https://github.com/trappitsch/qtcowsay#readme"
 Issues = "https://github.com/trappitsch/qtcowsay/issues"
 Source = "https://github.com/trappitsch/qtcowsay"
 
-[tool.hatch.version]
-path = "src/qtcowsay/__about__.py"
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.hatch.envs.default]
-dependencies = [
-  "coverage[toml]>=6.5",
-  "pytest",
-]
-[tool.hatch.envs.default.scripts]
-test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
-cov-report = [
-  "- coverage combine",
-  "coverage report",
-]
-cov = [
-  "test-cov",
-  "cov-report",
-]
+[tool.rye]
+managed = true
+dev-dependencies = []
 
-[[tool.hatch.envs.all.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+[tool.hatch.metadata]
+allow-direct-references = true
 
-[tool.hatch.envs.types]
-dependencies = [
-  "mypy>=1.0.0",
-]
-[tool.hatch.envs.types.scripts]
-check = "mypy --install-types --non-interactive {args:src/qtcowsay tests}"
-
-[tool.coverage.run]
-source_pkgs = ["qtcowsay", "tests"]
-branch = true
-parallel = true
-omit = [
-  "src/qtcowsay/__about__.py",
-]
-
-[tool.coverage.paths]
-qtcowsay = ["src/qtcowsay", "*/qtcowsay/src/qtcowsay"]
-tests = ["tests", "*/qtcowsay/tests"]
-
-[tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
-]
+[tool.hatch.build.targets.wheel]
+packages = ["src/qtcowsay"]
